# community-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  main.py  pyproject.toml
src/kagea-agent/: index_source.py
src/kagea-agent/qna/: __init__.py  qna_module.py
src/kagea-agent/qna/indexing/: __init__.py  indexing.py  use_artifacts.py
src/kagea-agent/qna/ingestion/: __init__.py
src/kagea_agent/: config.py  handlers.py  index_source.py  utils.py
src/kagea_agent/moderation/: __init__.py  moderation_module.py
src/kagea_agent/qna/: __init__.py  qna_module.py
src/kagea_agent/qna/indexing/: __init__.py  indexing.py  use_artifacts.py
src/kagea_agent/qna/ingestion/: __init__.py  gitbook.py
